# Langevin-MCMC

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  aws_setup.sh  local_build.sh  remote_build.sh  requirements.txt  setup.py  test_lmc_render.py  test_normals.py  test_normals_par.py  test_trafo.py
cmake/: build_embree.cmake
nanoflann/: CMakeLists.txt
python_bind/: CMakeLists.txt  dpt_ext.cpp  pythonscene.cpp  pythonscene.hpp
python_bind/lmc/: .gitignore  __init__.py
scenes/round_sensor_v2/: ies_area.xml  iesarea_roundsensor_scratch_v1.xml  lmc-playground.xml  lmc.xml  round_sensor_scratch.blend  round_sensor_scratch.blend1  round_sensor_scratch.xml  round_sensor_scratch_v1-playground.xml  round_sensor_scratch_v1.xml  round_sensor_scratch_v1.xml.bk
scenes/round_sensor_v2/dump/: round_sensor_scratch.xml  round_sensor_scratch_v1.xml
scenes/round_sensor_v2/meshes/: Epoxy onshape.ply  Epoxy shell v2-volume.ply  PDMS onshape.ply  PDMS onshape_v1.ply  PDMS_lightregion.ply  diffuse_layer.ply  unit_sphere.ply
scenes/round_sensor_v3/: ies_area.xml  iesarea_roundsensor_scratch_v1.exr  iesarea_roundsensor_scratch_v1.xml  sensor_thick_epoxy.blend
scenes/round_sensor_v3/dump/: sensor_thick_epoxy.xml  sensor_thick_epoxy_v1.xml
scenes/round_sensor_v3/dump/meshes/: Epoxy shell v3.ply  diffuse_surface.ply  unit_disk.002.ply  unit_disk.003.ply  unit_disk.004.ply  unit_disk.005.ply  unit_disk.006.ply  unit_disk.007.ply  unit_disk.008.ply  unit_disk.009.ply  unit_disk.010.ply  unit_disk.011.ply  unit_disk.012.ply  unit_disk.013.ply  unit_disk.014.ply  unit_disk.015.ply
scenes/round_sensor_v3/meshes/: interface.ply  lightboard.ply  unit_disk.001.ply  unit_disk.002.ply  unit_disk.004.ply  unit_disk.007.ply  unit_disk.008.ply  unit_disk.012.ply  unit_disk.013.ply  unit_disk.ply
scenes/round_sensor_v3/textures/: ies_aniso_v4.exr  ies_aniso_v5.exr
scenes/round_sensor_v4/: blue.spd  green.spd  lights_spec.xml  red.spd  sensor_thick_epoxy_v1_withobject.xml  sphere_pressed.py
scenes/round_sensor_v4/meshes/: Epoxy shell v3.ply  diffuse_layer.ply  interface.ply  lightboard.ply  unit_disk.001.ply  unit_disk.006.ply  unit_disk.008.ply  unit_disk.009.ply  unit_disk.010.ply  unit_disk.011.ply  unit_disk.012.ply  unit_disk.013.ply  unit_disk.014.ply  unit_disk.015.ply  unit_disk.ply  unit_disk.ply.bk
scenes/round_sensor_v4/meshes/orig/: unit_disk.001.ply  unit_disk.002.ply  unit_disk.003.ply  unit_disk.004.ply  unit_disk.005.ply  unit_disk.006.ply  unit_disk.007.ply
scenes/simple_test_scenes/: scene1_v1.xml  scene2_v1.xml  scene3_v1.xml  scene4_v1.xml  scene5_v1.xml  scene6_v1.xml  scene7_v1.xml  scene8_v1.xml  scene9_v1.xml
scenes/simple_test_scenes/meshes/: Cube.ply  Plane.ply  unit_disk.ply  unit_plane.ply
scenes/simple_test_scenes/textures/: rayfile_LT_T66G_20190621_IES.exr
scripts/: hdr_to_color_mit.py  render_spectral.py  requirements.txt  test_scenes.py
scripts/cameras/: color_filter_transmission_532_450.csv  color_filter_transmission_660nm.csv  pagnutti_v2_cam1.csv  prosilica_website_monochrome_digitalized.csv
scripts/data/: red20000.spd  test.xml  test_include.xml
src/: arealight.cpp  arealight.h  bitmaptexture.h  blendbsdf.cpp  blendbsdf.cpp.bk  blendbsdf.h.bk  bsdf.cpp  bsdf.h  camera.cpp  camera.h  chad.cpp  chad.h  collimatedlight.cpp  collimatedlight.h  commondef.h  deltalight.cpp.bk  deltalight.h.bk  direct.cpp  directintegrator.cpp  directintegrator.h  dptoptions.h  envlight.cpp  envlight.h  iesarea.cpp  iesarea.h  ieslight.cpp  ieslight.cpp.bk  ieslight.h  ieslight.h.bk  image.h  lambertian.cpp  light.cpp  light.h  loadserialized.cpp  main.cpp  mesh.cpp  mesh.h  microfacet.h  mlt.cpp  mlt.h  (+30 more)
tests/: check_cond_der.cpp  load_ply.cpp  sample_bsdf.cpp  test_al.xml  test_br.xml
